log
Thu 24 Aug 2023 08:43:58 PM UTC: 
 list.c | 10 +++++++++-
 1 file changed, 9 insertions(+), 1 deletion(-)
In file included from test.c:5:
list.c: In function ‘createList’:
list.c:34:3: error: ‘list’ undeclared (first use in this function); did you mean ‘List’?
   34 |   list->head==NULL;
      |   ^~~~
      |   List
list.c:34:3: note: each undeclared identifier is reported only once for each function it appears in
list.c:32:9: error: unused variable ‘movies’ [-Werror=unused-variable]
   32 |   List* movies= (List*) malloc(sizeof(List));
      |         ^~~~~~
list.c:41:1: error: control reaches end of non-void function [-Werror=return-type]
   41 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
635e0c8
Thu 24 Aug 2023 08:44:50 PM UTC: 
 list.c | 8 ++++----
 1 file changed, 4 insertions(+), 4 deletions(-)
In file included from test.c:5:
list.c: In function ‘createList’:
list.c:34:15: error: statement with no effect [-Werror=unused-value]
   34 |   movies->head==NULL;
      |               ^
list.c:35:18: error: statement with no effect [-Werror=unused-value]
   35 |   movies->current==NULL;
      |                  ^
list.c:34:9: error: ‘*movies.head’ is used uninitialized [-Werror=uninitialized]
   34 |   movies->head==NULL;
      |   ~~~~~~^~~~~~
list.c:35:9: error: ‘*movies.current’ is used uninitialized [-Werror=uninitialized]
   35 |   movies->current==NULL;
      |   ~~~~~~^~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
53e10cd
Thu 24 Aug 2023 08:45:01 PM UTC: 
 list.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  1|5
total_score: 10/70
7025031
Thu 24 Aug 2023 08:51:13 PM UTC: 
 list.c | 5 +++--
 1 file changed, 3 insertions(+), 2 deletions(-)
 tests:  1|5
total_score: 10/70
d5460ce
Thu 24 Aug 2023 08:51:29 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
list.c: In function ‘firstList’:
list.c:42:10: error: expected expression before ‘int’
   42 |   return int movies->head;
      |          ^~~
list.c:43:1: error: control reaches end of non-void function [-Werror=return-type]
   43 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
c02ffab
Thu 24 Aug 2023 08:52:45 PM UTC: 
 list.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
In file included from test.c:5:
list.c: In function ‘firstList’:
list.c:42:9: error: statement with no effect [-Werror=unused-value]
   42 |   movies->head;
      |   ~~~~~~^~~~~~
cc1: all warnings being treated as errors
Compilation failed
5370075
Thu 24 Aug 2023 08:52:53 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
e42f042
Thu 24 Aug 2023 09:01:45 PM UTC: 
 list.c | 8 +++++---
 1 file changed, 5 insertions(+), 3 deletions(-)
 tests:  1|5
total_score: 10/70
5f4ee4d
Fri 25 Aug 2023 12:19:42 AM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
32a1403
Fri 25 Aug 2023 12:25:47 AM UTC: 
 list.c | 9 ++++-----
 1 file changed, 4 insertions(+), 5 deletions(-)
 tests:  1|5
total_score: 10/70
fb1e12f
Fri 25 Aug 2023 12:28:54 AM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
list.c: In function ‘firstList’:
list.c:44:10: error: incompatible types when returning type ‘Node’ but ‘void *’ was expected
   44 |   return *list->current;
      |          ^~~~~~~~~~~~~~
list.c:45:1: error: control reaches end of non-void function [-Werror=return-type]
   45 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
a9a5fbb
Fri 25 Aug 2023 12:29:06 AM UTC: 
 list.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
In file included from test.c:5:
list.c: In function ‘firstList’:
list.c:42:16: error: assignment to ‘Node *’ from incompatible pointer type ‘Node **’ [-Werror=incompatible-pointer-types]
   42 |   list->current=&list->head;
      |                ^
cc1: all warnings being treated as errors
Compilation failed
2887301
Fri 25 Aug 2023 12:29:19 AM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
list.c: In function ‘firstList’:
list.c:42:18: error: incompatible types when assigning to type ‘Node’ from type ‘Node *’
   42 |   *list->current=list->head;
      |                  ^~~~
Compilation failed
3385ce6
Fri 25 Aug 2023 12:29:25 AM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
2969f9e
Fri 25 Aug 2023 12:29:55 AM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
05f0977
Fri 25 Aug 2023 12:30:12 AM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|5
total_score: 15/70
dbdb18e
Fri 25 Aug 2023 12:30:42 AM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
6154eb5
Fri 25 Aug 2023 12:30:50 AM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
caae47d
Fri 25 Aug 2023 12:30:59 AM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|5
total_score: 15/70
3fe03fd
Fri 25 Aug 2023 12:31:07 AM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|5
total_score: 15/70
cc04bbf
Fri 25 Aug 2023 12:31:52 AM UTC: 
 list.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
In file included from test.c:5:
list.c: In function ‘firstList’:
list.c:44:10: error: incompatible types when returning type ‘Node’ but ‘void *’ was expected
   44 |   return *list->current;
      |          ^~~~~~~~~~~~~~
list.c:45:1: error: control reaches end of non-void function [-Werror=return-type]
   45 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
6f16f87
Fri 25 Aug 2023 12:32:18 AM UTC: 
 list.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
In file included from test.c:5:
list.c: In function ‘firstList’:
list.c:42:13: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ before ‘->’ token
   42 |   List *list->current=list->head;
      |             ^~
list.c:42:13: error: expected expression before ‘->’ token
Compilation failed
e5a7931
Fri 25 Aug 2023 12:37:48 AM UTC: 
 list.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
In file included from test.c:5:
list.c: In function ‘firstList’:
list.c:42:3: error: ‘lista’ undeclared (first use in this function); did you mean ‘list’?
   42 |   lista->head=lista->current;
      |   ^~~~~
      |   list
list.c:42:3: note: each undeclared identifier is reported only once for each function it appears in
Compilation failed
93c5583
Fri 25 Aug 2023 12:37:56 AM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
6776d8f
Fri 25 Aug 2023 12:38:11 AM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
e6ce69a
Fri 25 Aug 2023 12:38:37 AM UTC: 
 list.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  1|5
total_score: 10/70
0b3aa46
Fri 25 Aug 2023 12:39:11 AM UTC: 
 list.c | 5 +----
 1 file changed, 1 insertion(+), 4 deletions(-)
In file included from test.c:5:
list.c: In function ‘firstList’:
list.c:44:1: error: control reaches end of non-void function [-Werror=return-type]
   44 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
98cf325
Fri 25 Aug 2023 12:39:41 AM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
list.c: In function ‘firstList’:
list.c:44:1: error: control reaches end of non-void function [-Werror=return-type]
   44 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
c26766a
Fri 25 Aug 2023 12:40:08 AM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
list.c: In function ‘firstList’:
list.c:44:1: error: control reaches end of non-void function [-Werror=return-type]
   44 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
3958c1f
Fri 25 Aug 2023 12:40:29 AM UTC: 
 list.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
In file included from test.c:5:
list.c: In function ‘firstList’:
list.c:45:1: error: control reaches end of non-void function [-Werror=return-type]
   45 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
d926b1c
Fri 25 Aug 2023 12:40:40 AM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
list.c: In function ‘firstList’:
list.c:45:1: error: control reaches end of non-void function [-Werror=return-type]
   45 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
6cc6547
